Improve en-GB thesis/long template localization

--- a/hhtemplate.tex
+++ b/hhtemplate.tex
@@ -84,21 +84,21 @@ $endif$
 \newtranslation[to = finnish]{report}{Raportti}
 \newtranslation[to = british]{assignmentreport}{Report}
 \newtranslation[to = finnish]{assignmentreport}{Harjoitustyöraportti}
-\newtranslation[to = british]{toctitle}{Contents}
+\newtranslation[to = british]{toctitle}{Table of contents}
 \newtranslation[to = finnish]{toctitle}{Sisällys}
 \newtranslation[to = british]{abstract}{Abstract}
 \newtranslation[to = finnish]{abstract}{Tiivistelmä}
 \newtranslation[to = british]{authors}{Author(s)}
 \newtranslation[to = finnish]{authors}{Tekijä(t)}
-\newtranslation[to = british]{thesisname}{Thesis title}
+\newtranslation[to = british]{thesisname}{Report/thesis title}
 \newtranslation[to = finnish]{thesisname}{Opinnäytetyön nimi}
 \newtranslation[to = british]{pagecount}{Number of pages}
 \newtranslation[to = finnish]{pagecount}{Sivumäärä}
-\newtranslation[to = british]{appendixpagecount}{number of appendices}
+\newtranslation[to = british]{appendixpagecount}{appendix pages}
 \newtranslation[to = finnish]{appendixpagecount}{liitesivumäärä}
 \newtranslation[to = british]{keywords}{Keywords}
 \newtranslation[to = finnish]{keywords}{Asiasanat}
-\newtranslation[to = british]{orientation}{Orientation}
+\newtranslation[to = british]{orientation}{Degree programme}
 \newtranslation[to = finnish]{orientation}{Suuntautuminen}
 \newtranslation[to = british]{abbreviations}{Abbreviations}
 \newtranslation[to = finnish]{abbreviations}{Lyhenteet}
