Correct en-GB thesis translations

--- a/hhtemplate.tex
+++ b/hhtemplate.tex
@@ -72,11 +72,11 @@ $endif$
 % Table = Taulukko
 
 \ifthenelse{\equal{\degreetype}{MBA}}{
-\newtranslation[to = british]{thesis}{Master thesis}
+\newtranslation[to = british]{thesis}{Master’s Thesis}
 \newtranslation[to = finnish]{thesis}{Master opinnäytetyö}
 }
 { % BBA
-\newtranslation[to = british]{thesis}{Thesis}
+\newtranslation[to = british]{thesis}{Bachelor’s Thesis}
 \newtranslation[to = finnish]{thesis}{Opinnäytetyö}
 }
 
