--- a/hhtemplate.tex
+++ b/hhtemplate.tex
@@ -153,14 +153,15 @@ $endif$
 
 \usepackage{lastpage}
 \usepackage{sectsty}
-\usepackage{titlesec}
 \usepackage{tabto}
 \NumTabs{5}
+
 
 \providecommand{\hhdocumentpagecount}{$if(hhdocumentpagecount)$$hhdocumentpagecount$$else$\pageref{LastPage}$endif$}
 \providecommand{\hhdocumentappendixpagecount}{$if(hhdocumentappendixpagecount)$$hhdocumentappendixpagecount$$else$0$endif$}
 
-
+\usepackage{titletoc}
+\usepackage{titlesec}
 % new line to top and bottom of any section
 \titlespacing*{\section}{0em}{1em}{1em}
 \titlespacing*{\subsection}{0em}{1em}{1em}
@@ -326,6 +327,22 @@ $endif$
   \newpage
   \pagenumbering{roman}
   \renewcommand*\contentsname{\translate{toctitle}}
+  \titlecontents{section}
+    [1.5em]
+    {}
+    {\contentslabel{1.5em}}{\hspace{-1.5em}}
+    {\titlerule*[3pt]{.}\contentspage}
+  \titlecontents{subsection}
+    [3.5em]
+    {}
+    {\contentslabel{2em}}{\hspace{-2em}}
+    {\titlerule*[3pt]{.}\contentspage}
+  \titlecontents{subsubsection}
+    [6em]
+    {}
+    {\contentslabel{2.5em}}{\hspace{-2.5em}}
+    {\titlerule*[3pt]{.}\contentspage}
+
   \tableofcontents
 
 
