Fix line spacing in long/thesis template format

--- a/hhtemplate.tex
+++ b/hhtemplate.tex
@@ -209,7 +209,9 @@ $endif$
   }
 
   \usepackage{setspace}
-  \onehalfspacing
+  
+  % We are aiming to get the MS Word's line spacing instead of \onehalfspacing
+  \setstretch{1.5}
 }
 
 %% pandoc-fignos: environment to disable figure caption prefixes
