--- a/hhtemplate.tex
+++ b/hhtemplate.tex
@@ -236,6 +236,14 @@ $endif$
 }
 \makeatother
 
+$if(csl-refs)$
+\newlength{\cslhangindent}       % set up new length
+\setlength{\cslhangindent}{$if(csl-hanging-indent)$2em$else$0em$endif$}
+\newenvironment{cslreferences}%
+  {\everypar{\setlength{\hangindent}{\cslhangindent}}}%
+  {\par} % by default, this env does not change anything
+$endif$
+
 $for(include-before)$
 $include-before$
 $endfor$
