Fix appendix formatting

--- a/hhtemplate.tex
+++ b/hhtemplate.tex
@@ -388,8 +388,7 @@ $body$
 $if(include-after)$
 \setcounter{secnumdepth}{-1}
 \renewcommand{\sectionbreak}{\newpage}
-\titleformat*{\subsection}{\normalfont}
-\titleformat*{\subsubsection}{\normalfont}
+\newpage
 $for(include-after)$
 $include-after$
 $endfor$
