Attachment numbering should start from page 1

--- a/hhtemplate.tex
+++ b/hhtemplate.tex
@@ -388,6 +388,7 @@ $body$
 $if(include-after)$
 \setcounter{secnumdepth}{-1}
 \newpage
+\setcounter{page}{1}
 $for(include-after)$
 $include-after$
 $endfor$
