Paragraph spacing to abstract

--- a/hhtemplate.tex
+++ b/hhtemplate.tex
@@ -347,7 +347,7 @@ $if(abstract)$
   \noindent{\vspace{-1pt}\fbox{\begin{minipage}[l][2.5em][t]{\textwidth}\textbf{\translate{authors}}\\\hhdocumentauthor\end{minipage}}
   \vspace{-1pt}\fbox{\begin{minipage}[l][2.5em][t]{\textwidth}\textbf{\translate{orientation}}\\\orientation\end{minipage}}
   \vspace{-1pt}\fbox{\begin{minipage}[l][4em][t]{\dimexpr(\textwidth-4.5cm)}\textbf{\translate{thesisname}}\\\ \\\hhdocumenttitle\end{minipage}}\hspace{-1pt}\fbox{\begin{minipage}[l][4em][t]{4.3cm}\textbf{\translate{pagecount} +\\\translate{numberofappendices}}\\ \hhdocumentpagecount\ + \hhdocumentnumberofappendices\end{minipage}}
-  \vspace{-1pt}\fbox{\begin{minipage}[l][16cm][t]{\textwidth}$abstract$\end{minipage}}
+  \vspace{-1pt}\fbox{\begin{minipage}[l][16cm][t]{\textwidth}\setlength{\parskip}{1em}$abstract$\end{minipage}}
   \vspace{-1pt}\fbox{\begin{minipage}[l][3.5em][t]{\textwidth}\textbf{\translate{keywords}}\\\hhdocumentkeywords\end{minipage}}}
   \newpage
   \setstretch{\hhlinespacing}
