Support adding attachments as a pandoc input file
seem that --include-after-body in pandoc does not support filters properly, so attachments should be either directly in the report document or as a separate file(s). /appdata/references.md is provided as a helper to bootstrap attachments correctly and to avoid boilerplate in markdown files

--- a/hhtemplate.tex
+++ b/hhtemplate.tex
@@ -107,6 +107,8 @@ $endif$
 \newtranslation[to = finnish]{abbreviations}{Lyhenteet}
 \newtranslation[to = british]{hhfullname}{Haaga-Helia University of Applied Sciences}
 \newtranslation[to = finnish]{hhfullname}{Haaga-Helia ammattikorkeakoulu}
+\newtranslation[to = british]{references}{References}
+\newtranslation[to = finnish]{references}{Lähteet}
 
 \usepackage{longtable}
 \usepackage{booktabs}
@@ -159,7 +161,7 @@ $endif$
 \usepackage{tabto}
 \NumTabs{5}
 
-\providecommand{\hhdocumentpagecount}{\pageref{lastReportPage}}
+\providecommand{\hhdocumentpagecount}{\ifthenelse{\equal{\pageref{lastReferencePage}}{\pageref{DUMMYNONEXISTINGLABEL}}}{\pageref{lastReportPage}}{\pageref{lastReferencePage}}}
 \providecommand{\hhdocumentnumberofappendices}{\ifthenelse{\equal{\pageref{lastAppendixPage}}{\pageref{DUMMYNONEXISTINGLABEL}}}{0}{\pageref{lastAppendixPage}}}
 
 \usepackage{setspace}
